fix: added media query to adjust chart container size in raised v spent chart component in order to fix chart sizing issues on smaller screens

--- a/src/app/vv-charts/raised-vs-spent/raised-vs-spent.component.scss
+++ b/src/app/vv-charts/raised-vs-spent/raised-vs-spent.component.scss
@@ -40,3 +40,11 @@ i {
     color: $vvgrey;
     font-size: 10px;
 }
+
+
+// Expanded Card Adjustments for Smaller Screens
+@media only screen and (max-width: 1200px) {
+    .chart-container{
+        width:50vw;
+    }
+ }
